--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
   }
 
   .input {
-    @apply sm:flex-1 max-sm:w-full text-base leading-normal text-slate-gray pl-5 max-sm:p-5 outline-none sm:border-none border max-sm:border-slate-gray max-sm:rounded-full;
+    @apply sm:flex-1 max-sm:w-full text-base leading-normal text-slate-700 pl-5 max-sm:p-5 outline-none sm:border-none border max-sm:border-slate-700 max-sm:rounded-full;
   }
 }
 
@@ -53,6 +53,6 @@
   }
 
   .info-text {
-    @apply font-montserrat text-slate-gray text-lg leading-7;
+    @apply font-montserrat text-slate-700 text-lg leading-7;
   }
 }
